# providers/openweathermap/models/main.go
@@ -1,0 +1,67 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Main main
+//
+// swagger:model Main
+type Main struct {
+
+	// feels like
+	FeelsLike float64 `json:"feels_like,omitempty"`
+
+	// grnd level
+	GrndLevel float64 `json:"grnd_level,omitempty"`
+
+	// humidity
+	Humidity uint64 `json:"humidity,omitempty"`
+
+	// pressure
+	Pressure float64 `json:"pressure,omitempty"`
+
+	// sea level
+	SeaLevel float64 `json:"sea_level,omitempty"`
+
+	// temp
+	Temp float64 `json:"temp,omitempty"`
+
+	// temp kf
+	TempKf float64 `json:"temp_kf,omitempty"`
+
+	// temp max
+	TempMax float64 `json:"temp_max,omitempty"`
+
+	// temp min
+	TempMin float64 `json:"temp_min,omitempty"`
+}
+
+// Validate validates this main
+func (m *Main) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Main) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Main) UnmarshalBinary(b []byte) error {
+	var res Main
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
