# providers/openweathermap/models/weather.go
@@ -1,0 +1,52 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Weather weather
+//
+// swagger:model Weather
+type Weather struct {
+
+	// description
+	Description string `json:"description,omitempty"`
+
+	// icon
+	Icon string `json:"icon,omitempty"`
+
+	// id
+	ID uint64 `json:"id,omitempty"`
+
+	// main
+	Main string `json:"main,omitempty"`
+}
+
+// Validate validates this weather
+func (m *Weather) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Weather) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Weather) UnmarshalBinary(b []byte) error {
+	var res Weather
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
